--- a/templates/loan_management.html
+++ b/templates/loan_management.html
@@ -548,7 +548,7 @@
                     <input type="number" class="form-input" id="front_back_interest_deduction" name="front_back_interest_deduction" step="0.01" value="0" readonly>
                 </div>
                 <div class="form-group">
-                    <label for="principal_to_return" class="form-label">ยอดเงินต้นที่ต้องคืน (บาท):</label>
+                    <label for="principal_to_return" class="form-label">ยอดเงินที่ต้องโอน (บาท):</label>
                     <input type="text" class="form-input" id="principal_to_return" name="principal_to_return" readonly>
                 </div>
                 <div class="form-group">
