--- a/templates/loan_management.html
+++ b/templates/loan_management.html
@@ -675,6 +675,11 @@
                 <input type="hidden" id="modal_company_name" name="company_name"> {# <-- NEW: Hidden field for company name #}
 
                 <div class="form-group">
+                    <label for="payment_modal_amount_paid" class="form-label">ยอดชำระแล้ว:</label>
+                    <input type="text" class="form-input" id="payment_modal_amount_paid" readonly>
+                </div>
+
+                <div class="form-group">
                     <label for="modal_customer_info" class="form-label">ลูกค้า:</label>
                     <input type="text" class="form-input" id="modal_customer_info" readonly>
                 </div>
