--- a/templates/loan_management.html
+++ b/templates/loan_management.html
@@ -802,7 +802,7 @@
             
             <div class="form-group">
                 <label for="reloan_modal_customer_info" class="form-label">ลูกค้า:</label>
-                <input type="text" class="form-input" id="reloan_modal_customer_info" readonly>
+                <input type="text" class="form-input" id="reloan_modal_customer_info" name="reloan_modal_customer_info" readonly>
             </div>
             <div class="form-group">
                 <label for="reloan_modal_company_name_display" class="form-label">บริษัทผู้ปล่อยกู้:</label>
